# Zero-to-Hero

./: .gitignore  README.md  pyproject.toml  requirements.txt
1_Classical_Foundation_Models/: README.md  inference_pretrained_model.py  linear_regression.ipynb  logistic_regression.ipynb  mlp.py
